test/typechecker.d/invalid/ass1.surc.bad
n = 5

f(x: Integer): Integer = fndo
	var b: Char <- True
	if b
		return x
	else
		return n
